# PhysX

./: CMakeLists.txt
dependencies/CMakeModules/: GetCompilerAndPlatform.cmake  NvidiaBuildOptions.cmake
dependencies/CMakeModules/PACKAGE_LICENSES/: cmakemodules-LICENSE.md
physx/source/compiler/cmake/: CMakeLists.txt
physx/source/compiler/cmake/windows/: CMakeLists.txt
